# utoville-ecommerce

./: Dockerfile  Jenkinsfile  Makefile  pyproject.toml
account/: models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_user_table.py  0002_remove_user_point.py  0002_remove_userhomecare_user_remove_userpoint_user_and_more.py  0003_remove_user_password.py  0003_rename_mb_email_user_email_alter_user_email.py  0003_user_point.py  0004_remove_user_is_superuser_remove_user_last_login.py  0004_user_mbm_residence_type.py  0004_user_point.py  0005_alter_user_mbm_residence_type.py  0005_usershippingaddress.py  0006_remove_user_mbm_residence_type_userseller.py  0006_usersellerarea.py  0007_alter_usersellerarea_table.py  0008_delete_usersellerarea.py  0009_userseller.py  0010_delete_userseller.py
account/templatetags/: account_filter.py
cart/: context_processors.py  models.py  urls.py  views.py
category/: context_processors.py  models.py
charge/: apps.py  dragon.py  models.py  urls.py  views.py
config/: settings.py  urls.py
house_check/: apps.py  models.py  urls.py
main/: urls.py  views.py
order/: context_processors.py  models.py  urls.py  views.py
order/views/: dragon.py  (+4 more)
payment/: models.py  urls.py  views.py
product/: models.py  tests.py  urls.py  views.py
profit/: actions.py  apps.py  models.py  urls.py  views.py
qna/: context_processors.py  models.py  urls.py
revenue/: models.py  urls.py  views.py
sso/: apps.py  db_router.py
subscribe/: models.py  urls.py
templates/: base.html  footer.html  header.html
util/: views.py
(+403 files in other folders)
