[tool.poetry]
name = "home-care"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "home_care"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.0.7"
djangorestframework = "^3.14.0"
django-oauth-toolkit = "^2.1.0"
PyMySQL = "^1.0.2"
Pillow = "^9.2.0"
django-imagekit = "^4.1.0"
django-mathfilters = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
