[tool.poetry]
name = "utoville-ecommerce"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "utoville_ecommerce"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.3"
pymysql = "^1.0.2"
django-mathfilters = "^1.0.0"
pillow = "^9.3.0"
django-imagekit = "^4.1.0"
python-dateutil = "^2.8.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
